Coloquei o ID do porto na classe Nodo pra gente poder ordenar os portos pra busca. Só portos têm o ID, que equivale ao número deles